public/stylus/spartacus.styl
// Note: Certain includes (e.g. mixins + lib files are part of the
// grunt-contrib-stylus conf.

@import '_throbber';
@import '_buttons';
@import '_full-error';
@import '_forms';
@import '_pin';

$mp-fonts-path = '../lib/mp-fonts-stylus';
@import '../lib/mp-fonts-stylus/fonts';

@import '_typography';

body, html {
    color: $dark-gray;
    height: 100%;
    width: 100%;
}

// Add stripes when running the dev server just to make it easier to know if you're looking
// at a webpay hosted version or the devlopment version.
.dev-server:before {
    background-color: yellow;
    background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, black 10px, black 20px);
    bottom: 0;
    content: '';
    display: block;
    opacity: 0.5;
    position: absolute;
    right: 0;
    top: 0;
    width: 10px;
    z-index: 20;
}

.view {
    background: $bg-color;
    grain();
    height: 100%;
    margin: 0;
    padding: 0;
    min-width: 250px;
    max-width: 100%;
}

main,
.page {
    height: 100%;
    overflow: auto;
}

.inner {
    display-flex();
    flex-direction(column);
    margin: 0 auto;
    max-width: $S-max;
    min-height: 100%;
    padding: 0 20px 10px;
    position: relative;
    width: 100%;
}

@media $small-min-width {
    .inner {
        display: block;
        padding: 85px;
    }
}

.content {
    flex(1, 1, 100%);
    width: 100%;
}

.buttons {
    background: rgba(0,0,0,0.03);
    border-top: 1px solid #ccc;
    line-height: 0;
    margin: 5px -20px -10px;
    padding: 10px;

    .button {
        margin: 0;
        width: 48%;
        width: calc(50% - 5px);

        &:first-child {
            margin-right: 5px
        }

        &:only-child {
            margin: 0;
            width: 100%;
        }
    }
}

@media $small-min-width {
    .buttons {
        text-align: right;
        background: none;
        border-top: 0;
        margin: 20px -20px;
        padding: 20px;

        .button,
        .button:only-child {
            width: auto;
        }
    }
}

.sign-in {
    background: url(../images/persona-btn-sprite.png) no-repeat right top;
    display: block;
    height: 42px;
    margin-top: 20px;
    max-width: 231px;
    padding-left: 50px;
    position: relative;
    text-align: center;
    text-decoration: none;
    text-shadow: 0 1px 1px $white;
    width: 100%;

    &:link,
    &:visited,
    &:hover,
    &:active,
    &:focus {
        color: $dark-gray;
        line-height: 42px;
    }

    &:hover,
    &:active,
    &:focus {
        background-position: right bottom;
    }
}

.err-msg {
    color: $blood-red;
}

